# thermostat

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs
ui/: appwindow.slint  elements.slint  logic.slint  style.slint
