[package]
name = "thermostat"
version = "0.1.0"
authors = ["PlanetTeamSpeak <PlanetTeamSpeakk@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
slint = "1.3.2"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
slint-build = "1.3.2"
winres = "0.1.12"
winapi = "0.3.9"
