[package]
name = "Thermostat"
version = "0.1.0"
authors = ["PlanetTeamSpeak <PlanetTeamSpeakk@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
slint = "1.4.1"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
slint-build = "1.4.1"
winres = "0.1.12"
winapi = "0.3.9"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
publisher = "PTSMods"
product_name = "Thermostat"
identifier = "com.ptsmods.thermostat"
description = "A simple thermostat app to manage the temperature in my room."
homepage = "https://github.com/PlanetTeamSpeakk/Thermostat"

nsis = { installMode = "both", installer_icon = "assets/icon.ico", appdata_paths = ["$LOCALAPPDATA/$PUBLISHER/$PRODUCTNAME"] }
